--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
   </footer>
 
   <div class="tg-float">
-    <a href="https://t.me/reprezentbot" target="_blank">
+    <a href="https://t.me/RepreZentbiz_bot" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" width="48" height="48" alt="Telegram">
     </a>
   </div>
@@ -373,3 +373,4 @@
   </script>
 </body>
 </html>
+
