--- a/index.html
+++ b/index.html
@@ -214,15 +214,16 @@
         <div class="form-group"><label>Ім’я:</label><input type="text" id="name" required></div>
         <div class="form-group"><label>Телефон:</label><input type="tel" id="phone" value="+380" required></div>
         <div class="form-group"><label>Дата заходу:</label><input type="date" id="order-date" required></div>
+        
 
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="400"> Проектор (400 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="700"> Колонка (700 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="250"> Фліпчарт (250 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="200"> Мікрофон (200 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="200"> Ресівер (200 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="300"> Каркас (300 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="300"> Екран (300 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
-        <div class="item-row"><label><input type="checkbox" class="item-chk" data-price="120"> Папір (120 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Проектор" data-price="400"> Проектор (400 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Колонка" data-price="700"> Колонка (700 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Фліпчарт" data-price="250"> Фліпчарт (250 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Мікрофон" data-price="200"> Мікрофон (200 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Ресівер" data-price="200"> Ресівер (200 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Каркас" data-price="300"> Каркас (300 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Екран" data-price="300"> Екран (300 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
+        <div class="item-row"><label><input type="checkbox" class="item-chk" data-name="Папір" data-price="120"> Папір (120 грн)</label><input type="number" class="item-qty" min="1" value="1"></div>
 
         <div class="form-group" style="margin-top:20px;">
           <label>Деталі (ваші побажання):</label>
@@ -334,3 +335,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
