--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div style="font-size: 1.15rem; line-height: 2.5;">
           <p style="margin: 15px 0;">
             <span style="background: #fff; padding: 8px 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); display: inline-block;">
-              📍 Львів, вул. Хоткевича 10
+              📍 Львів
             </span>
           </p>
           
@@ -224,3 +224,4 @@
  <script src="script.js"></script>
 </body>
 </html>
+
