--- a/index.html
+++ b/index.html
@@ -6,57 +6,107 @@
   <title>Оренда обладнання — RepreZentbiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    html { scroll-behavior: smooth; }
-    body { font-family: 'Poppins', sans-serif; margin: 0; background: #f4f4f4; color: #333; line-height: 1.6; }
-    
-    header { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    .brand { display: flex; align-items: center; gap: 10px; }
-    .brand img { width: 45px; height: 45px; border-radius: 50%; object-fit: cover; }
-    nav a { margin-left: 15px; text-decoration: none; color: #333; font-weight: 600; font-size: 0.9rem; }
+/* 1. Підключаємо шрифт (без цього Render виглядає тускло) */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 
-    .order-top {
-      position: fixed; top: 85px; left: 20px; background: #ff5a00; color: white;
-      padding: 10px 18px; border-radius: 8px; font-size: 14px; font-weight: 600;
-      text-decoration: none; z-index: 999; box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
+html { scroll-behavior: smooth; }
+body { 
+  font-family: 'Poppins', sans-serif; 
+  margin: 0; 
+  background: #f8f9fa; 
+  color: #333; 
+  line-height: 1.6; 
+  -webkit-font-smoothing: antialiased;
+}
 
-    .section { padding: 40px 5%; max-width: 1200px; margin: 0 auto; }
-    h3 { text-align: center; margin-bottom: 30px; font-size: 1.8rem; }
+/* ХЕДЕР ТА БРЕНД */
+header { 
+  background: #fff; 
+  padding: 12px 5%; 
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
+  position: sticky; 
+  top: 0; 
+  z-index: 1000; 
+  box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
+}
 
-    /* КАТАЛОГ */
-    .catalog { display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; }
-    .card { background: #fff; border-radius: 12px; padding: 15px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.06); display: flex; flex-direction: column; height: 100%; }
-    .card img { width: 100%; height: 160px; object-fit: cover; border-radius: 8px; margin-bottom: 12px; }
+.brand .title { 
+  font-weight: 800; 
+  font-size: 1.5rem; 
+  background: linear-gradient(90deg, #ff5a00, #ffcc00, #ff5a00);
+  background-size: 200% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 3s linear infinite;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 
-    /* ВІДГУКИ (ПОВНІ) */
-    .reviews { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
-    .review-card { background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 5px solid #ffcc00; }
-    .stars { color: #ffcc00; margin-bottom: 10px; font-size: 1.2rem; }
-    .review-card span { display: block; margin-top: 10px; font-size: 0.85rem; color: #777; font-weight: 600; }
+nav a { margin-left: 18px; text-decoration: none; color: #444; font-weight: 600; font-size: 0.9rem; transition: 0.3s; }
+nav a:hover { color: #ff5a00; }
 
-    /* УМОВИ (ПОВНІ) */
-    .terms-container { background: #fff; border: 2px solid #ffcc00; border-radius: 15px; padding: 25px; margin-top: 20px; }
-    .terms-list { list-style: none; padding: 0; }
-    .terms-list li { margin-bottom: 15px; display: flex; align-items: center; }
-    .terms-list li span { margin-right: 15px; font-size: 1.4rem; }
+/* ПЛАВАЮЧА КНОПКА (яскравіша) */
+.order-top {
+  position: fixed; top: 85px; left: 20px; background: #ff5a00; color: white;
+  padding: 12px 22px; border-radius: 50px; font-size: 14px; font-weight: 700;
+  text-decoration: none; z-index: 999; 
+  box-shadow: 0 8px 20px rgba(255, 90, 0, 0.3);
+  animation: pulse-orange 2s infinite;
+}
 
-    /* ПЕРЕВАГИ (ПОВНІ) */
-    .advantages { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; }
-    .adv { background: #333; color: #fff; padding: 10px 20px; border-radius: 50px; font-size: 0.9rem; font-weight: 600; }
+/* ЗАГОЛОВКИ */
+.section { padding: 60px 5%; max-width: 1100px; margin: 0 auto; }
+h1 { font-size: 2.8rem; color: #222; text-shadow: 0 0 20px rgba(255, 90, 0, 0.1); margin-bottom: 10px; font-weight: 800; text-align: center; }
+h3 { text-align: center; margin-bottom: 40px; font-size: 2rem; position: relative; font-weight: 700; }
+h3::after { content: ''; display: block; width: 60px; height: 5px; background: #ffcc00; margin: 15px auto; border-radius: 10px; }
 
-    /* ФОРМА */
-    .item-row { display: flex; justify-content: space-between; align-items: center; background: #fff; padding: 10px; margin-bottom: 8px; border-radius: 8px; border: 1px solid #eee; }
-    .item-qty { width: 60px; padding: 5px; }
+/* КАТАЛОГ (картки як на CodePen) */
+.catalog { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; }
+.card { 
+  background: #fff; border-radius: 20px; padding: 20px; text-align: center; 
+  box-shadow: 0 10px 30px rgba(0,0,0,0.05); transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+  border: 1px solid #f0f0f0; 
+}
+.card:hover { transform: translateY(-10px); box-shadow: 0 15px 35px rgba(255, 90, 0, 0.15); border-color: #ffcc00; }
+.card img { width: 100%; height: 180px; object-fit: cover; border-radius: 14px; margin-bottom: 15px; }
 
-    /* СОЦМЕРЕЖІ (УСІ 5) */
-    .socials { display: flex; justify-content: center; gap: 15px; padding: 20px; flex-wrap: wrap; }
-    .socials a svg { width: 35px; height: 35px; transition: 0.3s; }
-    .fb svg { fill: #1877F2; } .ig svg { fill: #E4405F; } .tt svg { fill: #000; } .th svg { fill: #000; } .ln svg { fill: #0077B5; }
+/* ФОРМА (сучасна та об'ємна) */
+#orderForm { 
+  background: #fff; padding: 40px; border-radius: 28px; 
+  box-shadow: 0 25px 60px rgba(0,0,0,0.08); max-width: 620px; margin: 0 auto; border: 1px solid #eee; 
+}
 
-    .tg-float { position: fixed; bottom: 20px; right: 20px; z-index: 1000; }
+.item-row { 
+  display: flex; justify-content: space-between; align-items: center; 
+  padding: 14px; margin-bottom: 12px; border-radius: 14px; 
+  background: #f9f9f9; border: 1px solid #f0f0f0; transition: 0.3s;
+}
+.item-row:hover { background: #fff; border-color: #ffcc00; transform: scale(1.02); }
 
-    @media (max-width: 1024px) { .catalog { grid-template-columns: repeat(2, 1fr); } }
-    @media (max-width: 600px) { .catalog { grid-template-columns: 1fr; } nav { display: none; } .order-top { top: auto; bottom: 90px; } }
+/* КНОПКА ЗАМОВИТИ */
+button[type="submit"] {
+  width: 100%; padding: 20px; background: linear-gradient(45deg, #ff5a00, #ff8c00); color: #fff; border: none; 
+  cursor: pointer; font-weight: 700; border-radius: 16px; font-size: 1.2rem;
+  transition: 0.3s; margin-top: 25px; box-shadow: 0 10px 25px rgba(255, 90, 0, 0.3);
+}
+button[type="submit"]:hover { transform: translateY(-3px); box-shadow: 0 15px 30px rgba(255, 90, 0, 0.4); }
+
+/* АНІМАЦІЇ */
+@keyframes shine { to { background-position: 200% center; } }
+@keyframes pulse-orange {
+  0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0.7); }
+  70% { transform: scale(1); box-shadow: 0 0 0 15px rgba(255, 90, 0, 0); }
+  100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0); }
+}
+
+/* МОБІЛЬНА АДАПТАЦІЯ */
+@media (max-width: 768px) {
+  h1 { font-size: 2rem; }
+  .order-top { top: auto; bottom: 20px; left: 50%; transform: translateX(-50%); width: 85%; text-align: center; }
+  .section { padding: 40px 5%; }
+}
   </style>
 </head>
 <body>
@@ -224,4 +274,5 @@
  <script src="script.js"></script>
 </body>
 </html>
+
 
