--- a/index.html
+++ b/index.html
@@ -6,108 +6,129 @@
   <title>Оренда обладнання — RepreZentbiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-/* 1. Підключаємо шрифт (без цього Render виглядає тускло) */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
+  /* 1. ШРИФТИ ТА ОСНОВА */
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 
-html { scroll-behavior: smooth; }
-body { 
-  font-family: 'Poppins', sans-serif; 
-  margin: 0; 
-  background: #f8f9fa; 
-  color: #333; 
-  line-height: 1.6; 
-  -webkit-font-smoothing: antialiased;
-}
+  html { scroll-behavior: smooth; }
+  body { 
+    font-family: 'Poppins', sans-serif; 
+    margin: 0; 
+    background: #fdfdfd; 
+    color: #333; 
+    line-height: 1.6; 
+    overflow-x: hidden;
+    -webkit-font-smoothing: antialiased;
+  }
 
-/* ХЕДЕР ТА БРЕНД */
-header { 
-  background: #fff; 
-  padding: 12px 5%; 
-  display: flex; 
-  justify-content: space-between; 
-  align-items: center; 
-  position: sticky; 
-  top: 0; 
-  z-index: 1000; 
-  box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
-}
+  /* 2. ХЕДЕР (КОМПАКТНИЙ ЛОГОТИП) */
+  header { 
+    background: #fff; 
+    padding: 10px 5%; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    position: sticky; 
+    top: 0; 
+    z-index: 1000; 
+    box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
+  }
+  .brand { display: flex; align-items: center; gap: 10px; }
+  .brand img { 
+    width: 36px; /* Ідеальний компактний розмір */
+    height: 36px; 
+    border-radius: 50%; 
+    object-fit: cover; 
+    border: 1.5px solid #ff5a00; 
+  }
+  .brand .title { 
+    font-weight: 800; 
+    font-size: 1.2rem; 
+    background: linear-gradient(90deg, #ff5a00, #ffcc00, #ff5a00);
+    background-size: 200% auto; 
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    animation: shine 3s linear infinite; 
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+  nav a { margin-left: 15px; text-decoration: none; color: #444; font-weight: 600; font-size: 0.85rem; transition: 0.3s; }
+  nav a:hover { color: #ff5a00; }
 
-.brand .title { 
-  font-weight: 800; 
-  font-size: 1.5rem; 
-  background: linear-gradient(90deg, #ff5a00, #ffcc00, #ff5a00);
-  background-size: 200% auto;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shine 3s linear infinite;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
+  /* 3. ПЛАВАЮЧА КНОПКА */
+  .order-top {
+    position: fixed; top: 80px; left: 20px; background: #ff5a00; color: white;
+    padding: 10px 18px; border-radius: 50px; font-size: 13px; font-weight: 700;
+    text-decoration: none; z-index: 999; box-shadow: 0 8px 20px rgba(255, 90, 0, 0.3);
+    animation: pulse-orange 2s infinite;
+  }
 
-nav a { margin-left: 18px; text-decoration: none; color: #444; font-weight: 600; font-size: 0.9rem; transition: 0.3s; }
-nav a:hover { color: #ff5a00; }
+  /* 4. КАТАЛОГ (РІВНІ КАРТКИ) */
+  .section { padding: 50px 5%; max-width: 1200px; margin: 0 auto; }
+  h1 { font-size: 2.4rem; font-weight: 800; text-align: center; margin-bottom: 5px; color: #222; }
+  h3 { text-align: center; margin-bottom: 35px; font-size: 1.8rem; font-weight: 700; position: relative; }
+  h3::after { content: ''; display: block; width: 40px; height: 4px; background: #ffcc00; margin: 10px auto; border-radius: 2px; }
 
-/* ПЛАВАЮЧА КНОПКА (яскравіша) */
-.order-top {
-  position: fixed; top: 85px; left: 20px; background: #ff5a00; color: white;
-  padding: 12px 22px; border-radius: 50px; font-size: 14px; font-weight: 700;
-  text-decoration: none; z-index: 999; 
-  box-shadow: 0 8px 20px rgba(255, 90, 0, 0.3);
-  animation: pulse-orange 2s infinite;
-}
+  .catalog { 
+    display: grid; 
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+    gap: 20px; 
+    width: 100%;
+  }
+  .card { 
+    background: #fff; border-radius: 18px; padding: 18px; text-align: center; 
+    box-shadow: 0 8px 25px rgba(0,0,0,0.04); transition: 0.3s; border: 1px solid #f2f2f2; 
+    display: flex; flex-direction: column; height: 100%; box-sizing: border-box;
+  }
+  .card:hover { transform: translateY(-7px); box-shadow: 0 12px 30px rgba(255, 90, 0, 0.1); border-color: #ffcc00; }
+  .card img { width: 100%; height: 170px; object-fit: cover; border-radius: 12px; margin-bottom: 12px; }
+  .card h4 { margin: 10px 0 auto; font-size: 1.15rem; color: #222; } /* "auto" тут вирівнює контент */
+  .card p { font-weight: 700; color: #ff5a00; margin-top: 10px; font-size: 1rem; }
 
-/* ЗАГОЛОВКИ */
-.section { padding: 60px 5%; max-width: 1100px; margin: 0 auto; }
-h1 { font-size: 2.8rem; color: #222; text-shadow: 0 0 20px rgba(255, 90, 0, 0.1); margin-bottom: 10px; font-weight: 800; text-align: center; }
-h3 { text-align: center; margin-bottom: 40px; font-size: 2rem; position: relative; font-weight: 700; }
-h3::after { content: ''; display: block; width: 60px; height: 5px; background: #ffcc00; margin: 15px auto; border-radius: 10px; }
+  /* 5. ФОРМА (БЕЗПЕЧНА ШИРИНА) */
+  #orderForm { 
+    background: #fff; padding: 30px; border-radius: 24px; 
+    box-shadow: 0 15px 45px rgba(0,0,0,0.06); max-width: 600px; margin: 0 auto; 
+    border: 1px solid #eee; box-sizing: border-box;
+  }
+  .item-row { 
+    display: flex; justify-content: space-between; align-items: center; 
+    padding: 10px 14px; margin-bottom: 8px; border-radius: 10px; 
+    background: #fcfcfc; border: 1px solid #f0f0f0; transition: 0.2s;
+  }
+  .item-row:hover { background: #fff; border-color: #ffcc00; }
+  input, textarea { width: 100%; box-sizing: border-box; border: 1px solid #ddd; border-radius: 10px; padding: 12px; font-size: 1rem; }
+  .item-qty { width: 55px; padding: 5px; text-align: center; border-radius: 6px; }
 
-/* КАТАЛОГ (картки як на CodePen) */
-.catalog { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; }
-.card { 
-  background: #fff; border-radius: 20px; padding: 20px; text-align: center; 
-  box-shadow: 0 10px 30px rgba(0,0,0,0.05); transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
-  border: 1px solid #f0f0f0; 
-}
-.card:hover { transform: translateY(-10px); box-shadow: 0 15px 35px rgba(255, 90, 0, 0.15); border-color: #ffcc00; }
-.card img { width: 100%; height: 180px; object-fit: cover; border-radius: 14px; margin-bottom: 15px; }
+  button[type="submit"] {
+    width: 100%; padding: 18px; background: linear-gradient(45deg, #ff5a00, #ff8c00); 
+    color: #fff; border: none; cursor: pointer; font-weight: 700; border-radius: 14px; 
+    font-size: 1.1rem; box-shadow: 0 8px 20px rgba(255, 90, 0, 0.25); transition: 0.3s;
+  }
 
-/* ФОРМА (сучасна та об'ємна) */
-#orderForm { 
-  background: #fff; padding: 40px; border-radius: 28px; 
-  box-shadow: 0 25px 60px rgba(0,0,0,0.08); max-width: 620px; margin: 0 auto; border: 1px solid #eee; 
-}
+  /* 6. СОЦМЕРЕЖІ */
+  .socials { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; }
+  .socials a svg { width: 32px; height: 32px; transition: 0.3s; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.05)); }
+  .socials a:hover svg { transform: translateY(-3px); }
+  .fb svg { fill: #1877F2; } .ig svg { fill: #E4405F; } .tt svg { fill: #000; } .th svg { fill: #000; } .ln svg { fill: #0077B5; }
 
-.item-row { 
-  display: flex; justify-content: space-between; align-items: center; 
-  padding: 14px; margin-bottom: 12px; border-radius: 14px; 
-  background: #f9f9f9; border: 1px solid #f0f0f0; transition: 0.3s;
-}
-.item-row:hover { background: #fff; border-color: #ffcc00; transform: scale(1.02); }
+  /* АНІМАЦІЇ */
+  @keyframes shine { to { background-position: 200% center; } }
+  @keyframes pulse-orange {
+    0% { transform: scale(0.96); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0.5); }
+    70% { transform: scale(1); box-shadow: 0 0 0 12px rgba(255, 90, 0, 0); }
+    100% { transform: scale(0.96); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0); }
+  }
 
-/* КНОПКА ЗАМОВИТИ */
-button[type="submit"] {
-  width: 100%; padding: 20px; background: linear-gradient(45deg, #ff5a00, #ff8c00); color: #fff; border: none; 
-  cursor: pointer; font-weight: 700; border-radius: 16px; font-size: 1.2rem;
-  transition: 0.3s; margin-top: 25px; box-shadow: 0 10px 25px rgba(255, 90, 0, 0.3);
-}
-button[type="submit"]:hover { transform: translateY(-3px); box-shadow: 0 15px 30px rgba(255, 90, 0, 0.4); }
-
-/* АНІМАЦІЇ */
-@keyframes shine { to { background-position: 200% center; } }
-@keyframes pulse-orange {
-  0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0.7); }
-  70% { transform: scale(1); box-shadow: 0 0 0 15px rgba(255, 90, 0, 0); }
-  100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0); }
-}
-
-/* МОБІЛЬНА АДАПТАЦІЯ */
-@media (max-width: 768px) {
-  h1 { font-size: 2rem; }
-  .order-top { top: auto; bottom: 20px; left: 50%; transform: translateX(-50%); width: 85%; text-align: center; }
-  .section { padding: 40px 5%; }
-}
-  </style>
+  /* МОБІЛЬНА ВЕРСІЯ */
+  @media (max-width: 768px) {
+    h1 { font-size: 1.7rem; }
+    nav { display: none; }
+    .order-top { top: auto; bottom: 20px; left: 50%; transform: translateX(-50%); width: 80%; text-align: center; }
+    .catalog { grid-template-columns: 1fr; gap: 15px; }
+    #orderForm { padding: 20px; }
+    .brand .title { font-size: 1rem; }
+  }
+</style>
 </head>
 <body>
 
@@ -274,5 +295,6 @@ button[type="submit"]:hover { transform: translateY(-3px); box-shadow: 0 15px 30
  <script src="script.js"></script>
 </body>
 </html>
+
 
 
