--- a/index.html
+++ b/index.html
@@ -11,45 +11,21 @@
 
   html { scroll-behavior: smooth; }
   body { 
-    font-family: 'Poppins', sans-serif; 
-    margin: 0; 
-    background: #fdfdfd; 
-    color: #333; 
-    line-height: 1.6; 
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
+    font-family: 'Poppins', sans-serif; margin: 0; background: #fdfdfd; color: #333; 
+    line-height: 1.6; overflow-x: hidden; -webkit-font-smoothing: antialiased;
   }
 
-  /* 2. ХЕДЕР (КОМПАКТНИЙ ЛОГОТИП) */
+  /* 2. ХЕДЕР ТА КОМПАКТНИЙ ЛОГО */
   header { 
-    background: #fff; 
-    padding: 10px 5%; 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    position: sticky; 
-    top: 0; 
-    z-index: 1000; 
-    box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
+    background: #fff; padding: 10px 5%; display: flex; justify-content: space-between; 
+    align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 15px rgba(0,0,0,0.06); 
   }
   .brand { display: flex; align-items: center; gap: 10px; }
-  .brand img { 
-    width: 36px; /* Ідеальний компактний розмір */
-    height: 36px; 
-    border-radius: 50%; 
-    object-fit: cover; 
-    border: 1.5px solid #ff5a00; 
-  }
+  .brand img { width: 38px; height: 38px; border-radius: 50%; object-fit: cover; border: 1.5px solid #ff5a00; }
   .brand .title { 
-    font-weight: 800; 
-    font-size: 1.2rem; 
-    background: linear-gradient(90deg, #ff5a00, #ffcc00, #ff5a00);
-    background-size: 200% auto; 
-    -webkit-background-clip: text; 
-    -webkit-text-fill-color: transparent;
-    animation: shine 3s linear infinite; 
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
+    font-weight: 800; font-size: 1.2rem; background: linear-gradient(90deg, #ff5a00, #ffcc00, #ff5a00);
+    background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+    animation: shine 3s linear infinite; text-transform: uppercase;
   }
   nav a { margin-left: 15px; text-decoration: none; color: #444; font-weight: 600; font-size: 0.85rem; transition: 0.3s; }
   nav a:hover { color: #ff5a00; }
@@ -62,53 +38,62 @@
     animation: pulse-orange 2s infinite;
   }
 
-  /* 4. КАТАЛОГ (РІВНІ КАРТКИ) */
-  .section { padding: 50px 5%; max-width: 1200px; margin: 0 auto; }
-  h1 { font-size: 2.4rem; font-weight: 800; text-align: center; margin-bottom: 5px; color: #222; }
-  h3 { text-align: center; margin-bottom: 35px; font-size: 1.8rem; font-weight: 700; position: relative; }
-  h3::after { content: ''; display: block; width: 40px; height: 4px; background: #ffcc00; margin: 10px auto; border-radius: 2px; }
-
-  .catalog { 
-    display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
-    gap: 20px; 
-    width: 100%;
-  }
+  /* 4. КАТАЛОГ */
+  .section { padding: 50px 5%; max-width: 1100px; margin: 0 auto; }
+  h1 { font-size: 2.4rem; font-weight: 800; text-align: center; margin-bottom: 5px; }
+  h3 { text-align: center; margin-bottom: 35px; font-size: 1.8rem; font-weight: 700; }
+  
+  .catalog { display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 20px; }
   .card { 
     background: #fff; border-radius: 18px; padding: 18px; text-align: center; 
-    box-shadow: 0 8px 25px rgba(0,0,0,0.04); transition: 0.3s; border: 1px solid #f2f2f2; 
+    box-shadow: 0 8px 25px rgba(0,0,0,0.04); transition: 0.3s; border: 1px solid #f2f2f2;
     display: flex; flex-direction: column; height: 100%; box-sizing: border-box;
   }
-  .card:hover { transform: translateY(-7px); box-shadow: 0 12px 30px rgba(255, 90, 0, 0.1); border-color: #ffcc00; }
+  .card:hover { transform: translateY(-7px); border-color: #ffcc00; }
   .card img { width: 100%; height: 170px; object-fit: cover; border-radius: 12px; margin-bottom: 12px; }
-  .card h4 { margin: 10px 0 auto; font-size: 1.15rem; color: #222; } /* "auto" тут вирівнює контент */
-  .card p { font-weight: 700; color: #ff5a00; margin-top: 10px; font-size: 1rem; }
+  .card p { font-weight: 700; color: #ff5a00; margin-top: auto; }
 
-  /* 5. ФОРМА (БЕЗПЕЧНА ШИРИНА) */
+  /* 5. ВІДГУКИ (ЗОЛОТІ ЗІРКИ ТА РАМКИ) */
+  .reviews { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
+  .review-card { 
+    background: #fff; padding: 25px; border-radius: 18px; 
+    box-shadow: 0 8px 20px rgba(0,0,0,0.03); border: 1px solid #eee; border-left: 6px solid #ffcc00; 
+  }
+  .stars { color: #ffcc00; margin-bottom: 10px; font-size: 1.2rem; letter-spacing: 2px; }
+
+  /* 6. УМОВИ ОРЕНДИ (У РАМЦІ) */
+  .terms-container { 
+    background: #fff; border: 2px solid #ffcc00; border-radius: 20px; 
+    padding: 30px; box-shadow: 0 10px 25px rgba(0,0,0,0.02); 
+  }
+  .terms-list { list-style: none; padding: 0; }
+  .terms-list li { margin-bottom: 15px; display: flex; align-items: center; font-weight: 500; }
+  .terms-list li span { margin-right: 15px; font-size: 1.5rem; }
+
+  /* 7. ПЕРЕВАГИ (ПОСОРТОВАНІ БАБЛИ) */
+  .advantages { display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; }
+  .adv { 
+    background: #333; color: #fff; padding: 10px 22px; border-radius: 50px; 
+    font-size: 0.9rem; font-weight: 600; box-shadow: 0 4px 10px rgba(0,0,0,0.15); 
+  }
+
+  /* 8. ФОРМА */
   #orderForm { 
-    background: #fff; padding: 30px; border-radius: 24px; 
-    box-shadow: 0 15px 45px rgba(0,0,0,0.06); max-width: 600px; margin: 0 auto; 
-    border: 1px solid #eee; box-sizing: border-box;
+    background: #fff; padding: 30px; border-radius: 24px; box-shadow: 0 20px 50px rgba(0,0,0,0.07); 
+    max-width: 600px; margin: 0 auto; border: 1px solid #eee; box-sizing: border-box;
   }
   .item-row { 
     display: flex; justify-content: space-between; align-items: center; 
-    padding: 10px 14px; margin-bottom: 8px; border-radius: 10px; 
-    background: #fcfcfc; border: 1px solid #f0f0f0; transition: 0.2s;
+    padding: 10px 14px; margin-bottom: 8px; border-radius: 10px; background: #fcfcfc; border: 1px solid #f0f0f0;
   }
-  .item-row:hover { background: #fff; border-color: #ffcc00; }
-  input, textarea { width: 100%; box-sizing: border-box; border: 1px solid #ddd; border-radius: 10px; padding: 12px; font-size: 1rem; }
-  .item-qty { width: 55px; padding: 5px; text-align: center; border-radius: 6px; }
-
   button[type="submit"] {
     width: 100%; padding: 18px; background: linear-gradient(45deg, #ff5a00, #ff8c00); 
-    color: #fff; border: none; cursor: pointer; font-weight: 700; border-radius: 14px; 
-    font-size: 1.1rem; box-shadow: 0 8px 20px rgba(255, 90, 0, 0.25); transition: 0.3s;
+    color: #fff; border: none; cursor: pointer; font-weight: 700; border-radius: 14px; font-size: 1.1rem;
   }
 
-  /* 6. СОЦМЕРЕЖІ */
-  .socials { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; }
-  .socials a svg { width: 32px; height: 32px; transition: 0.3s; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.05)); }
-  .socials a:hover svg { transform: translateY(-3px); }
+  /* 9. СОЦМЕРЕЖІ */
+  .socials { display: flex; justify-content: center; gap: 20px; }
+  .socials a svg { width: 35px; height: 35px; }
   .fb svg { fill: #1877F2; } .ig svg { fill: #E4405F; } .tt svg { fill: #000; } .th svg { fill: #000; } .ln svg { fill: #0077B5; }
 
   /* АНІМАЦІЇ */
@@ -119,14 +104,10 @@
     100% { transform: scale(0.96); box-shadow: 0 0 0 0 rgba(255, 90, 0, 0); }
   }
 
-  /* МОБІЛЬНА ВЕРСІЯ */
   @media (max-width: 768px) {
-    h1 { font-size: 1.7rem; }
     nav { display: none; }
-    .order-top { top: auto; bottom: 20px; left: 50%; transform: translateX(-50%); width: 80%; text-align: center; }
-    .catalog { grid-template-columns: 1fr; gap: 15px; }
-    #orderForm { padding: 20px; }
-    .brand .title { font-size: 1rem; }
+    .order-top { top: auto; bottom: 20px; left: 50%; transform: translateX(-50%); width: 85%; text-align: center; }
+    .catalog { grid-template-columns: 1fr; }
   }
 </style>
 </head>
@@ -295,6 +276,7 @@
  <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
